[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cctree"
version = "0.1.0"
description = "Interactive conversation tree navigator for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sarthak Bhardwaj", email = "sarthak.bhardwaj21b@iiitg.ac.in"},
]
dependencies = [
    "textual>=0.50.0",
]

[project.scripts]
cctree = "cctree.__main__:main"

[tool.setuptools.packages.find]
include = ["cctree*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
